fixed button on mobile, happy reviews widget

--- a/assets/reviews-app-judge.css
+++ b/assets/reviews-app-judge.css
@@ -334,4 +334,7 @@
     .jdgm-gallery .jdgm-gallery__thumbnail-link:nth-child(8) .jdgm-gallery__thumbnail-wrapper:before {
         content: 'See more' !important;
     }
+    .jdgm-all-reviews__header .jdgm-write-rev-link {
+        max-width: 205px !important
+    }
 }
